Please check: https://github.com/INTER-Mediator/INTER-Mediator
Also the Migration Guide (Japanese) might be informative:
  http://inter-mediator.info/ja/for-developers/migration.html

Ver.8 (in development)
- The password hash for authentication moves to SHA-256 based hash, and it has the interoperability with SHA-1 hash.
  (LDAP and self-service password reset are not checked so far.)
- Custom script for logout button of the page navigation can set to INTERMediatorOnPage.logoutScript as function(){}.
  The default function exists in the top part of INTERMediatorOnPage object.
- [BUG FIX] IMLibPageNavigation.moveDetailOnceAgain() didn't work fine.
- [BUG FIX] On the navi-control key, confirm-delete works but delete-confirm didn't (also insert).
- [BUG FIX] Fix compatibility with Claris FileMaker Server. The affected version is Ver.7.
- [BUG FIX] Fix handling Claris FileMaker's checkbox set feature when using DB_FileMaker_DataAPI class.

Ver.7 (March 20, 2021)
- The synchronizing with clients is back without Pusher.
- The FileMaker_DataAPI class updated for API protocol ver.2. And also introduced the 'portals' key on context definitions.
- CSV File uploading and add records for each line. I'd like to check the 'samples/Sample_webpage/fileuploadCSV_MySQL.html'
  file or the Sample page > JS Components > jQuery FileUploader > CSV file upload with jQuery_File_Upload.
- If setting INTERMediator.alwaysAddOperationExchange to true, the local context criteria combine logical
  expressions with ADN operator.
- The font-weight of the css * target changed from lighter to non description for adjusting the Android.
- The method INTERMediatorOnPage.doAfterDeleteRecord can define. One parameter is going to pass the context name.
- The 'ignoring-field' key can be defined in a context definition and it ignores any fields in the array value
  to check to include the field in the result.
- The processing for 'data-im-group' attributes was eliminated in updating to Ver.6.